cabal-version:      2.2
name:               aoc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author: BristerMitten
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, day01, day02, directory
    hs-source-dirs:   app
    default-language: GHC2021


common day
    import:           warnings
    build-depends:    base, aoc
    default-language: GHC2021
    
library 
    import: warnings
    build-depends: base
    hs-source-dirs: common
    default-language: GHC2021
    exposed-modules:  Parsing

library day01
    import:           day
    exposed-modules:  Day01
    hs-source-dirs:   day01
    
library day02
    import:           day
    exposed-modules:  Day02
    hs-source-dirs:   day02
    build-depends: containers